# AI-Sage-Financial-Coach

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  FCA_COMPLIANCE_ASSESSMENT.md  PRODUCT_ROADMAP.md  hello.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: Anti-Hallucination Auditor.agent.md  FCA Compliance Reviewer.agent.md  Guardrails Stress Tester.agent.md  Security Reviewer.agent.md  Test Case Generator.agent.md  Test Execution Reporter.agent.md
api/: main.py
coaching_agent/: __init__.py  agent.py  guardrails.py  memory.py  skills.md
coaching_agent/tools/: __init__.py  adviser_handoff.py  budget_planner.py  debt_savings_tradeoff.py  financial_health.py  knowledge_base.py  life_event_detector.py  mortgage_affordability.py  product_eligibility.py  transaction_analyser.py
data/: __init__.py  mock_transactions.py
data/knowledge_docs/: budgeting_guidance.txt  savings_products.txt
demo/: chat_panel.js  dashboard.html  login.html  streamlit_app.py  style.css
docs/code-review/: 2026-02-23-security-review.md
docs/compliance/: 2026-02-24-fca-review.md
docs/guardrails/: 2026-02-24-stress-test.md
tests/: conftest.py  test_api.py  test_chart_extraction.py  test_guardrails.py  test_memory.py  test_tools.py
